# vxui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  vxui.h  vxui_hud.h  vxui_impl.h  vxui_impl_util.h  vxui_menu.h
demo/: demo_render_gl.h  main.cpp
demo/internal/: TinyWindow.h  demo_layout.h  demo_screens.h  layout_contract.h  layout_validation.h  locale_shared.h  main_menu_shared.h  ops_deck_shared.h  shot.h  split_deck_shared.h  theme.h
demo/windows/: vxui_demo.manifest  vxui_demo_manifest.rc
tests/: dump_layout.h  release_probe.cpp  test_author_stories.cpp  test_clay_bridge.cpp  test_core.cpp  test_demo_layout.cpp  test_demo_shot.cpp  test_frame.cpp  test_game_menu.cpp  test_hud.cpp  test_input_just_pressed.cpp  test_input_repeated.cpp  test_integration.cpp  test_layout_contracts.cpp  test_layout_helpers.h  test_locale.cpp  test_main.cpp  test_menu.cpp  test_menu_collision.cpp  test_menu_draw.cpp  test_menu_in_div.cpp  test_menu_input_edge.cpp  test_menu_noninteractive.cpp  test_menu_option.cpp  test_menu_remount.cpp  test_menu_scroll.cpp  test_menu_slider.cpp  test_menu_stack.cpp  test_menu_text.cpp  test_motion.cpp  test_mouse.cpp  test_pages.cpp  test_plot.cpp  test_primitives_advanced.cpp  test_primitives_basic.cpp  test_render_data.cpp  test_root.cpp  test_row_index.cpp  test_screen_stack.cpp  test_sequences_tooling.cpp  (+8 more)
tests/data/: sequence_invalid.toml  sequence_valid.toml
tools/: eyeball.py  plot_layout.py
